[package]
name = "mbaduk_ui"
description = "A ui baduk client"
license = "MIT"
repository = "https://github.com/ottobrown/mbaduk/tree/main/ui"
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.19.0"

mb_goban = { version = "0.2.0", path = "../goban" }
mb_sgf = { version = "0.1.0", path = "../goban" }
